--- a/todoApp/src/app/todo/todo-item/todo-item.component.html
+++ b/todoApp/src/app/todo/todo-item/todo-item.component.html
@@ -2,7 +2,7 @@
 <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
 <li [ngClass]="{'completed': todo.completed, 'editing': editing}">
     <div class="view">
-        <input class="toggle" type="checkbox" [checked]="todo.completed">
+        <input class="toggle" type="checkbox" [formControl]="chkField" [checked]="todo.completed">
         <label (dblclick)="edit()">{{todo.text}}</label>
         <button class="destroy"></button>
     </div>
