--- a/todoApp/src/app/todo/todo-item/todo-item.component.html
+++ b/todoApp/src/app/todo/todo-item/todo-item.component.html
@@ -4,7 +4,7 @@
     <div class="view">
         <input class="toggle" type="checkbox" [formControl]="chkField" [checked]="todo.completed">
         <label (dblclick)="edit()">{{todo.text}}</label>
-        <button class="destroy"></button>
+        <button (click)="destroy()" class="destroy"></button>
     </div>
     <input class="edit" [value]="todo.text" [formControl]="txtInput" (blur)="finishEdit()" #txtInputRef>
 </li>
