--- a/financeApp/src/app/shared/footer/footer.component.html
+++ b/financeApp/src/app/shared/footer/footer.component.html
@@ -1,1 +1,9 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="container-fluid clearfix">
+        <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Derechos reservados © 2020
+        <a href="http://sparanzza.com" target="_blank">Aurelio Muñoz</a>.</span>
+        <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">
+        <i class="fa fa-heart text-danger"></i>
+      </span>
+    </div>
+</footer>
