add routing modules

--- a/financeApp/src/app/auth/login/login.component.html
+++ b/financeApp/src/app/auth/login/login.component.html
@@ -35,7 +35,7 @@
                         <div class="text-block text-center my-3">
                             <span class="text-small font-weight-semibold">are you not registered? </span>
                             <br>
-                            <a href="" class="text-black text-small">Create new account</a>
+                            <a routerLink="/register" routerLinkActive="router-link-active" class="text-black text-small">Create new account</a>
                         </div>
                     </form>
                 </div>
