add html dashboard

--- a/financeApp/src/app/deposit/detail/detail.component.html
+++ b/financeApp/src/app/deposit/detail/detail.component.html
@@ -1,1 +1,32 @@
-<p>detail works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Details of amount</h4>
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Deposit</th>
+                            <th>Amount</th>
+                            <th>Type</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>Deposit</td>
+                            <td>Amount</td>
+                            <td>Type</td>
+                            <td>action</td>
+                        </tr>
+                    </tbody>
+
+                </table>
+
+
+            </div>
+        </div>
+    </div>
+</div>
