--- a/financeApp/src/app/deposit/deposit.component.html
+++ b/financeApp/src/app/deposit/deposit.component.html
@@ -1,1 +1,51 @@
-<p>deposit works!</p>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Add Deposit</h4>
+                <p class="card-description">
+                    Specify the amount and type
+                </p>
+
+                <form>
+
+                    <div class="form-group">
+                        <label>Description</label>
+                        <input type="text" class="form-control" placeholder="Description" name="descripcion">
+                    </div>
+
+                    <div class="form-group">
+                        <label>Amount</label>
+                        <input type="number" class="form-control" placeholder="Amount" name="monto">
+                        <p>
+                            It must be a positive amount
+                        </p>
+                    </div>
+
+                    <div class="form-group">
+                        <label>type</label>
+                        <br>
+                        <button type="button" class="btn btn-primary btn-block">Deposit</button>
+                        <!-- <button type="button" class="btn btn-warning btn-block">Deposit</button> -->
+                    </div>
+
+                    <hr>
+                    <button type="button" class="btn btn-success mr-2">
+                <i class="fa fa-save"></i>
+                Add
+              </button>
+
+                    <!-- 
+                <button disabled class="btn btn-success mr-2">
+                  <i class="fa fa-spin fa-sync"></i>
+                  Please, wait ...
+                </button> 
+              -->
+
+                    <button type="reset" class="btn btn-light">Cancel</button>
+
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
